{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 776,
  "lineage": "a06cd467-716b-b8b0-2367-a5132fb35ffd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default-vpc-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:494307375889:route-table/rtb-04de826def3de6e72",
            "default_route_table_id": "rtb-04de826def3de6e72",
            "id": "rtb-04de826def3de6e72",
            "owner_id": "494307375889",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d51b7a355ae7f8e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default_vpc_route_table"
            },
            "tags_all": {
              "Name": "default_vpc_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f753fa8673263bbb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev-gw",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7f5342e82d8ae53",
            "arn": "arn:aws:ec2:ap-northeast-2:494307375889:instance/i-079f9ebf7ba5dddd2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-079f9ebf7ba5dddd2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev_pub",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-017bf101a6ffae1fb",
            "private_dns": "ip-10-0-4-37.ap-northeast-2.compute.internal",
            "private_ip": "10.0.4.37",
            "public_dns": "ec2-3-36-67-68.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.67.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-02b6c5d98e6fe7dc9",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-04cee4b8a8c7c2661",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-079d222279b403f52"
            ]
          },
          "dependencies": [
            "aws_security_group.eks_sg",
            "aws_subnet.pub",
            "aws_vpc.dev-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:494307375889:internet-gateway/igw-09d51b7a355ae7f8e",
            "id": "igw-09d51b7a355ae7f8e",
            "owner_id": "494307375889",
            "tags": {
              "Name": "terraform-dev-gw"
            },
            "tags_all": {
              "Name": "terraform-dev-gw"
            },
            "vpc_id": "vpc-0f753fa8673263bbb"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-nat-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:494307375889:route-table/rtb-02d5f41de6d9e94f1",
            "id": "rtb-02d5f41de6d9e94f1",
            "owner_id": "494307375889",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-079f9ebf7ba5dddd2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-017bf101a6ffae1fb",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f753fa8673263bbb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.nat",
            "aws_security_group.eks_sg",
            "aws_subnet.pub",
            "aws_vpc.dev-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet-gw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:494307375889:route-table/rtb-0da6e1a69b014bed0",
            "id": "rtb-0da6e1a69b014bed0",
            "owner_id": "494307375889",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d51b7a355ae7f8e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-gw-route-table"
            },
            "tags_all": {
              "Name": "dev-gw-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f753fa8673263bbb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev-gw",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tst-eks-rt-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0667f3803d7f9efd9",
            "route_table_id": "rtb-02d5f41de6d9e94f1",
            "subnet_id": "subnet-078072e650b133ea2"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_route_table.dev-nat-rt",
            "aws_security_group.eks_sg",
            "aws_subnet.pub",
            "aws_subnet.tst-eks1",
            "aws_vpc.dev-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tst-eks-rt-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bfe311847de9055",
            "route_table_id": "rtb-02d5f41de6d9e94f1",
            "subnet_id": "subnet-0d5624839448478b5"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_route_table.dev-nat-rt",
            "aws_security_group.eks_sg",
            "aws_subnet.pub",
            "aws_subnet.tst-eks2",
            "aws_vpc.dev-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-efs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:494307375889:security-group/sg-0ca5534cbc153c81f",
            "description": "Allos inbound efs traffic from ec2(eks-node-grp)",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-079d222279b403f52"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca5534cbc153c81f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-079d222279b403f52"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "eks-efs-sg",
            "name_prefix": "",
            "owner_id": "494307375889",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f753fa8673263bbb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_sg",
            "aws_vpc.dev-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:494307375889:security-group/sg-0e1133adee5f06358",
            "description": "sg group all worker node craete using aws_eks_node_group instance",
            "egress": [],
            "id": "sg-0e1133adee5f06358",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.4.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              }
            ],
            "name": "eks_node_sg",
            "name_prefix": "",
            "owner_id": "494307375889",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f753fa8673263bbb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:494307375889:security-group/sg-079d222279b403f52",
            "description": "Security group for all worker nodes in pub 1 sbnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3306
              }
            ],
            "id": "sg-079d222279b403f52",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "210.179.21.212/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "210.179.21.212/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "210.179.21.212/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              }
            ],
            "name": "terraform_dev_pub_sg",
            "name_prefix": "",
            "owner_id": "494307375889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-dev-pub-node"
            },
            "tags_all": {
              "Name": "terraform-dev-pub-node"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f753fa8673263bbb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:494307375889:subnet/subnet-04cee4b8a8c7c2661",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cee4b8a8c7c2661",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "494307375889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-dev-eks-subnet-pub"
            },
            "tags_all": {
              "Name": "terraform-dev-eks-subnet-pub"
            },
            "vpc_id": "vpc-0f753fa8673263bbb"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tst-eks1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:494307375889:subnet/subnet-078072e650b133ea2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078072e650b133ea2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "494307375889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-dev-eks-subnet-pri1",
              "kubernetes.io/cluster/tst-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "terraform-dev-eks-subnet-pri1",
              "kubernetes.io/cluster/tst-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f753fa8673263bbb"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tst-eks2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:494307375889:subnet/subnet-0d5624839448478b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5624839448478b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "494307375889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-dev-eks-subnet-pri2",
              "kubernetes.io/cluster/tst-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "terraform-dev-eks-subnet-pri2",
              "kubernetes.io/cluster/tst-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f753fa8673263bbb"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:494307375889:vpc/vpc-0f753fa8673263bbb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-006d9130dc68b5b38",
            "default_route_table_id": "rtb-04de826def3de6e72",
            "default_security_group_id": "sg-064171b27c1cbd051",
            "dhcp_options_id": "dopt-d59c24be",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f753fa8673263bbb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04de826def3de6e72",
            "owner_id": "494307375889",
            "tags": {
              "Name": "terraform-dev-node",
              "kubernetes.io/cluster/{var.cluster-name}": "owned"
            },
            "tags_all": {
              "Name": "terraform-dev-node",
              "kubernetes.io/cluster/{var.cluster-name}": "owned"
            }
          }
        }
      ]
    }
  ]
}